// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeltaPatcher should apply an initial delta correctly 1`] = `
"pre
;middle
;post"
`;

exports[`DeltaPatcher should apply many different patches correctly 1`] = `
"pre
;middle
;another
;third
;post"
`;

exports[`DeltaPatcher should apply many different patches correctly 2`] = `
"new pre
;third
;twelve
;post"
`;

exports[`DeltaPatcher should apply many different patches correctly 3`] = `
"1
;ten
;1"
`;
